--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,13 +12,13 @@
           <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
+          <a class="nav-link" href="{{"/research" | relative_url }}">Research</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
+          <a class="nav-link" href="{{ "/publications" | relative_url }}">Publications</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
+          <a class="nav-link" href="{{"/teaching" | relative_url }}">Teaching</a>
         </li>
       </ul>
     </div>
