--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,15 @@
 
 {% include head.html %}
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Site Title</title>
+  <!-- Include Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+</head>
+
 <body>
 
   {% include navbar.html %}
