--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,12 +31,12 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C0YTJSLE5C"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-C0YTJSLE5C"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-C0YTJSLE5C');
-  </script>
+  </script> -->
 </head>
