--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,4 +1,16 @@
-<span class="reading-time" title="Estimated read time">
+<!-- <span class="reading-time" title="Estimated read time">
   {% assign words = include.content | number_of_words %}
   {% if words < 135 %} 1 min {% else %} {{ words | divided_by:135 | ceil }} mins {% endif %} read
+</span> -->
+
+<!-- filepath: /c:/Users/zhiyhe/Personal/Homepage/Homepage of Zhiyu/zhiyu-home-new/_includes/read_time.html -->
+<span class="reading-time" title="Estimated read time" id="reading-time">
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      var content = "{{ include.content | strip_html | escape }}";
+      var words = content.length;
+      var readingTime = Math.ceil(words / 135);
+      document.getElementById("reading-time").innerText = readingTime + " min read";
+    });
+  </script>
 </span>
