--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -353,9 +353,9 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Open Sans", Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Roboto, "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 
 h1, .h1 {
@@ -9195,7 +9195,7 @@ body {
 }
 
 p {
-  line-height: 1.5;
+  line-height: 1.7;
   margin: 30px 0;
 }
 p a {
