--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,6 +57,16 @@
             </a>
           </li>
           {% endif %}
+          {% if site.google_scholar_username %}
+          <li class="list-inline-item">
+            <a href="https://scholar.google.com/citations?user={{ site.google_scholar_username }}">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
           {% if site.instagram_username %}
           <li class="list-inline-item">
             <a href="https://instagram.com/{{ site.instagram_username }}">
